email: Ensure we don't crash when there's no mailto preferredService

BUG: 443788